Routes: fix repeating walk leg background on Firefox

--- a/src/scss/includes/direction.scss
+++ b/src/scss/includes/direction.scss
@@ -438,7 +438,7 @@ input:valid:focus + .itinerary__field__clear {
 
   &--walk {
     background: url(../images/direction_icons/walking_bullet_roadmap.png) repeat space;
-    background-size: 7px;
+    background-size: 7px 10px;
   }
 }
 
